<resources>
    <string name="Boton">Aceptar</string>
    <string name="app_name">SearchSave</string>
    <string name="Menu">M E N U   P R I N C I P A L</string>
    <string name="NewNote">N E W - N O T E</string>
    <string name="ViewNote">V I E W - N O T E</string>
    <string name="PageSave">P A G E S  - S A V E</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_main_p">Menu Botones</string>
    <string name="title_activity_new_note">New-Note</string>
    <string name="retornoText">Has pulsado en la notificación.</string>
    
    <string name="title_activity_view_note">View-Note</string>
    <string name="title_activity_pages_save">Pages-Save</string>

    <string name="btnNewNote">New Note</string>
    <string name="MsjEmptyNewNote">Aún no existen elementos en la lista.</string>
    <string name="deleteNewNote">Borrar</string>
    <string name="cancelNewNote">Cancelar</string>
    
    <string name="btnViewNote">View Note</string>
    
    <string name="btnPageSave">Pages Save</string>
    <string name="btnExit">EXIT</string>
    <string name="btnBack">BACK</string>
    <string name="btnSave">SAVE</string>
    <string name="srt_mensajeNN"></string>
    
    <string name="no_todos">Aún no existen elementos en la lista.</string>
	<color name="listcolor">#94A65D</color>
    
    
    <color name="listcolorViewNote">#94E65D</color>
    <color name="blackrowNewNote">#000000</color>
</resources>