<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="477dp"
    android:background="@drawable/fnewnote"    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/NewNote" />

    <EditText
        android:id="@+id/txt_Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="text" 
        android:hint="NEW NOTE"/>
    
    <TextView
        android:id="@+id/lb_MensajeNewNote"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_Note"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/srt_mensajeNN" />

    <Button
        android:id="@+id/B_BackNN"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lb_MensajeNewNote"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:onClick="onClick"
        android:text="@string/btnBack"
        android:textColor="#ff0000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/B_SaveNN"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/B_BackNN"
        android:layout_alignBottom="@+id/B_BackNN"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/B_BackNN"
        android:onClick="onClick"
        android:text="@string/btnSave" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_Note"
        android:layout_below="@+id/txt_Note"
        android:layout_marginTop="20dp"
        android:entries="@array/priorities" />

</RelativeLayout>

</ScrollView>